# jimmy

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  Makefile  README  jimmy.xml  manifest.xml  oldCMakeLists.txt  positions  rospy
DynaManager/source/: dynaManager.java
arbotix/HelloWorld/: HelloWorld.ino
arbotix/all_servos/: all_servos.ino
arbotix/comm_test/: comm_test.ino
arbotix/gesture_test/: gesture_test.ino  jimmy_arms.h~
arbotix/idle_gestures/: idle_gestures.ino  jimmy_arms.h  poses.h
arbotix/single_servo_comm_test/: jimmy_arms.h  poses.h  single_servo_comm_test.ino
conf/: IK.cf  gestures annotated  gestures.cf  plan.cf  poses annotated.cf  poses.cf  puppet
documentation/: interesting_links.txt  interesting_links~
include/jimmy/: ControlUtils.h  Eigen_utils.h  IK.h  IKcmd.h  Jimmy.h  JimmyCommon.h  Logger.h  Plan.h  RobotState.h  Step.h  Utils.h  arbotix_comm.h  lipm_planner.h  lqr_controller.h  serial.h  soautils.h
launch/: jimmy.launch  jimmy.launch~  jimmy_HRI.launch  jimmy_movement.launch
msg/: jimmy_command.msg  jimmy_gesture.msg  jimmy_servo.msg
msg_gen/cpp/include/jimmy/: jimmy_command.h  jimmy_gesture.h  jimmy_servo.h
msg_gen/lisp/: _package.lisp  _package_jimmy_servo.lisp  jimmy-msg.asd  jimmy_command.lisp  jimmy_gesture.lisp  jimmy_servo.lisp
scripts/: IMU_listen.py  IMU_output.py  a.py  b.py  chatterbotapitest.py  client.py  color_detect_pub.py  color_listen.py  color_track.py  color_tracking.py  edge_detection.py  face_detect_pub.py  face_detect_pub.py~  face_detect_pub1.py  face_detect_pub_old.py  face_listen.py  face_listen_gold.py  idle.py  interaction.py  jimmy_main.py  markov  newFaceDetect.py  output_1396642924.flac  pyaudio  pynoise.py  record_voice.py  rosFaceDetect.py  serialAccel.py  server.py  speech_input.py  speech_output.py  stt.py  test.py  test_conversation.py  test_gesture.py  test_send_servo_py.py  testnoise.py  testspeak.py  wiggle
scripts/comtests/: comtest.py
scripts/interaction/: color_detect.py  color_tracking.py  rosFaceDetect.py
scripts/old_code/: client.py  newFaceDetect.py  test_gesture.py
scripts/servos/: single_servo.py  test.py
src/: ControlUtils.cpp  IK.cpp  Jimmy.cpp  JimmyWalkMain.cpp  Plan.cpp  RobotState.cpp  jimmy_gestures.cpp  jimmy_joint_positions.cpp  jimmy_servos.cpp  jimmy_servos2.cpp  lipm_planner.cpp  serial.cpp  soautils.c  test_as_client.cpp  test_puppet.cpp  test_ros.cpp  test_send_gesture_cmd.cpp  test_send_servo_cmd.cpp  test_serial.cpp  test_wiggle.cpp
src/SingleControl/: main.cpp  test_msg.cpp
src/arbotix/: arbotix.ino
src/jimmy/msg/: __init__.py  _jimmy_command.py  _jimmy_gesture.py  _jimmy_servo.py
tools/pypose/: jimmy  jimmy_arms.ppr  jimmy_pypose_proj.ppr
